[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "unix_ar"
authors = [{name = "Remi Rampin", email = "remirampin@gmail.com"}]
maintainers = [{name = "Alan Justino", email = "alan.justino@yahoo.com.br"}]
license = {text = "BSD"}
description = "AR file handling"
readme = "README.md"
keywords = ["ar", "archive", "unix", "deb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
urls = {Homepage = "https://github.com/getninjas/unix_ar"}
requires-python = "~=3.6"
dynamic = ["version"]

[tool.setuptools]
py-modules = ["unix_ar"]
include-package-data = false

[tool.distutils.bdist_wheel]
universal = 1

[tool.flake8]
max-line-length = "120"
ignore = "F821, E731"

[tool.setuptools_scm]
