[metadata]
name = unix_ar
author = Remi Rampin
author_email = remirampin@gmail.com
maintainer = Alan Justino
maintainer_email = alan.justino@yahoo.com.br
license = BSD
description = AR file handling
keywords = ar, archive, unix, deb
url = https://github.com/getninjas/unix_ar
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: System :: Archiving
    Topic :: Utilities

[options]
py_modules = unix_ar
python_requires = ~=3.6

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
ignore = F821, E731
